fixed request btn spacing for buddy card

--- a/src/styles/buddyCard.style.css
+++ b/src/styles/buddyCard.style.css
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  margin: 30px auto 0 auto;
   border: none;
   width: 200px;
   border-radius: 20px;
